# zero2prod

./: Cargo.toml  README.md  configuration.yaml
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_ckeck.rs
